# Spider-Solitaire

./: CMakeLists.txt  README.md  render.h
src/: Card.cpp  Card.h  Spider.cpp  Spider.h  Stack.cpp  Stack.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  render.cpp  render.h
